--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,7 +4,13 @@
     // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
-
+        {
+            "type": "java",
+            "name": "Main",
+            "request": "launch",
+            "mainClass": "src.Main",
+            "projectName": "Escape_Room_f047a24c"
+        },
         {
             "type": "java",
             "name": "Current File",
@@ -17,7 +23,7 @@
             "request": "launch",
             "mainClass": "src.levels.Level1",
             "projectName": "Escape_Room_1a8a9d27",
-            "vmArgs": "--module-path C:/dev/java/openjfx-25_windows-x64_bin-sdk/javafx-sdk-25/lib --add-modules javafx.controls"
+            "vmArgs": "--module-path \"C:/Java/javafx-sdk-17.0.16/lib\" --add-modules javafx.controls,javafx.fxml"
         }
     ]
 }
