--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -11,6 +11,14 @@
     "c:\\dev\\java\\openjfx-25_windows-x64_bin-sdk\\javafx-sdk-25\\lib\\javafx-swt.jar",
     "c:\\dev\\java\\openjfx-25_windows-x64_bin-sdk\\javafx-sdk-25\\lib\\jdk.jsobject.jar",
     "c:\\dev\\java\\openjfx-25_windows-x64_bin-sdk\\javafx-sdk-25\\lib\\jfx.incubator.input.jar",
-    "c:\\dev\\java\\openjfx-25_windows-x64_bin-sdk\\javafx-sdk-25\\lib\\jfx.incubator.richtext.jar"
+    "c:\\dev\\java\\openjfx-25_windows-x64_bin-sdk\\javafx-sdk-25\\lib\\jfx.incubator.richtext.jar",
+    "c:\\Java\\javafx-sdk-17.0.16\\lib\\javafx.base.jar",
+    "c:\\Java\\javafx-sdk-17.0.16\\lib\\javafx.controls.jar",
+    "c:\\Java\\javafx-sdk-17.0.16\\lib\\javafx.fxml.jar",
+    "c:\\Java\\javafx-sdk-17.0.16\\lib\\javafx.graphics.jar",
+    "c:\\Java\\javafx-sdk-17.0.16\\lib\\javafx.media.jar",
+    "c:\\Java\\javafx-sdk-17.0.16\\lib\\javafx.swing.jar",
+    "c:\\Java\\javafx-sdk-17.0.16\\lib\\javafx.web.jar",
+    "c:\\Java\\javafx-sdk-17.0.16\\lib\\javafx-swt.jar"
   ]
 }
